Changes from Feedback, added preloading

--- a/assets/text/langs/de.json
+++ b/assets/text/langs/de.json
@@ -35,8 +35,9 @@
     "speaker-check-restart": "<p>Ist die Lautstärke so angenehm für Sie?</p>",
     "begin-training-session": "<p><b>Training</b><br>Anhand einiger Beispiele werden Sie nun durch den Ablauf des Experiments geführt.<br>Bitte lesen Sie sich die Instruktionen aufmerksam durch.</p>",
     "begin-technical":"<p><b>Technische Einstellung</b><br>Im nächsten Schritt bitten wir Sie, Ihr Mikrofon auszuwählen und zu testen und die Lautstärke einzustellen. Bitte führen Sie das Experiment mit Kopfhörern durch.</p>",
-    "begin-titration": "<p>Wir werden jetzt das Experiment für Sie kalibrieren.</p><p>Sie hören Audio, dass eventuell ein gesprochenes Wort enthält. Bitte beantworten Sie die Fragen so gut Sie können.</p>",
-    "language-detected-question": "<p>Hat das Audio Sprache enthalten?</p>",
+    "begin-titration": "<p>Wilkommen zum Experiment.</p><p>Als erstes bestimmen wir die Schwelle, ab der Sie in einem verrauschten Signal Sprache wahrnehmen. Diese Schwelle kann von Person zu Person variieren.</p><p>Zu Beginn jedes Durchgangs ist das Signal sehr verrauscht und wird im Verlauf immer deutlicher. Jeder Durchgang enthält ein neues Signal und kann in seiner Länge variieren. Bei jeder Abstufung fragen wir Sie, ob das Signal Sprache beziehungsweise ein Wort enthält. Bitte beachten Sie dass es Durchgänge gibt, in denen keine Sprache enthalten ist. Der Beginn eines neuen Durchgangs wird durch ein Lautsprechersymbol signalisiert.</p><p>Bitte hören Sie im Folgenden genau zu und beantworten Sie die Fragen warheitsgemäß.</p>",
+    "titration-before-first": "<p>Nun hören Sie in verrauschtes Signal.</p>",
+    "language-detected-question": "<p>Haben Sie in diesem Signal Sprache verstanden?</p>",
     "word-detected-question": "<p>Haben Sie ein konkretes Wort verstanden?</p>",
     "titration-which-word-question": "Welches Wort haben Sie verstanden?",
     "titration-typo-question": "<p>Wollten Sie dieses Wort eingeben: ",
