Changes to Layout and German Text from feedback

--- a/assets/text/langs/de.json
+++ b/assets/text/langs/de.json
@@ -1,12 +1,12 @@
 {
   "title": "Sprachbasierter Task",
-  "mic-select-text": "<p>Bitte suchen Sie Ihr Mikrofon aus.<br>Sie werden es gleich testen und können auf diese Seite zurückkehren, falls es nicht funktioniert.</p>",
+  "mic-select-text": "<p><b>Bitte suchen Sie Ihr Mikrofon aus.</b></p><p>Sie werden es gleich testen und können auf diese Seite zurückkehren, falls es nicht funktioniert.</p>",
   "mic-select-button": "Dieses Mikrofon verwenden",
   "word-response-stimulus": "<p>Welches Wort haben Sie am Ende des Satzes verstanden?</p>",
   "done-button": "Weiter",
-  "word-question": "<p>Welches Wort haben Sie gehört?</p><br><p>Drücken Sie \"Weiter\" und sagen Sie dann gleich <b>laut</b> und <b>deutlich</b> das Wort, welches Sie gehört haben.</p><p> Es kann auch nur eine VERMUTUNG sein, aber bitte raten Sie nicht. Wenn Sie nichts verstanden haben, sagen Sie bitte laut das Wort \"NICHTS\".</p>",
+  "word-question": "<p>Welches Wort haben Sie gehört?</p><p>Drücken Sie \"Weiter\" und sagen Sie dann gleich <b>laut</b> und <b>deutlich</b> das Wort, welches Sie gehört haben.</p><p>Es kann auch nur eine <b>Vermutung</b> sein, aber bitte raten Sie nicht.</p><p>Wenn Sie kein Wort verstanden haben, sagen Sie bitte laut und deutlich das Wort \"nichts\".</p>",
   "word-question-prior-question":"<p>Haben Sie das Wort, was Sie gesagt haben, auch als Satzende erwartet?</p>",
-  "word-question-prior": "<p>Welches Wort haben Sie als Satzende erwartet?</p><br><p>Drücken Sie \"Weiter\" und sagen Sie dann gleich <b>laut</b> und <b>deutlich</b> das Wort, welches Sie erwartet haben.</p>",
+  "word-question-prior": "<p>Welches Wort haben Sie als Satzende erwartet?</p><p>Drücken Sie \"Weiter\" und sagen Sie dann gleich <b>laut</b> und <b>deutlich</b> das Wort, welches Sie erwartet haben.</p>",
   "clarity-question": "<p>Wie deutlich haben Sie das Wort gehört?</p>",
   "confidence-question": "<p>Wie sicher sind Sie sich mit Ihrer Antwort?</p>",
   "expectation-question":"<p>Wie stark haben Sie dieses Wort erwartet?</p>",
@@ -26,9 +26,9 @@
     "Sehr sicher<br>100%"
   ],
   "explanation-pre-playback": "<p>Sie hören gleich die Stimme einer Frau, die einen Satz vorliest. Das letzte Wort ist etwas undeutlich.</p>",
-  "explanation-post-playback": "<p>Wie Sie sicher gemerkt haben, war das letzte Wort wirklich undeutlich. Bitte hören Sie sich den Satz noch einmal an. Geben Sie dann an, wie deutlich Sie das Wort gehört haben.</p>",
+  "explanation-post-playback": "<p>Wie Sie sicher gemerkt haben, war das letzte Wort wirklich undeutlich.</p><p><b>Bitte hören Sie sich den Satz noch einmal an. Geben Sie dann an, wie deutlich Sie das Wort gehört haben.</b></p>",
   "end-of-first-tutorial-sentence": "<p>Damit haben Sie nun alle Fragen zu diesem Satz beantwortet. Klicken Sie auf \"Weiter\", um den nächsten Satz zu beginnen.</p>",
-  "end-of-tutorial": "<p>Vielen Dank! Sie haben das Training erfolgreich beendet. Jetzt beginnt das Experiment.</p>",
+  "end-of-tutorial": "<p><b>Vielen Dank!</b></p><p>Sie haben das Training erfolgreich beendet. Jetzt beginnt das Experiment.</p>",
   "ready-for-next-stimulus": "<p>Sind Sie bereit für den nächsten Satz?</p>",
   "pause-stimulus": "<p>Zeit für eine kurze Pause. Wenn Sie bereit für die nächsten 50 Sätze sind, klicken Sie auf \"Weiter\".</p>",
   "did-not-accept-message": "Sie haben die Einverständniserklärung nicht akzeptiert. Dieser Tab wird sich jetzt schließen.",
@@ -36,22 +36,25 @@
   "yes-button": "Ja",
   "no-button": "Nein",
   "not-understood":"Ich habe nichts verstanden",
-  "mic-test": "<p>Bitte sagen Sie ein Wort, um Ihr Mikrofon zu testen. Sprechen Sie dafür <b>laut</b> und <b>deutlich</b>.</p>",
-  "recording-check": "<p'>Haben Sie das Wort gehört, das Sie aufgenommen haben?</p><p>Wenn Sie die Aufnahme wiederholen wollen, drücken Sie \"Mikrofon ändern\".</p><p>Wenn Sie die Aufnahme nochmal anhören wollen, drücken Sie \"Aufnahme abspielen\".</p><p>Wenn Sie mit der Aufnahme zufrieden sind, drücken Sie \"Weiter\".</p>",
+  "mic-test": "<p><b>Bitte sagen Sie ein Wort, um Ihr Mikrofon zu testen.</b></p><p>Sprechen Sie dafür <b>laut</b> und <b>deutlich</b>.</p>",
+  "recording-check": "<p><b>Haben Sie das Wort gehört, das Sie aufgenommen haben?</b></p><p>Wenn Sie die Aufnahme wiederholen wollen, drücken Sie \"Mikrofon ändern\".</p><p>Wenn Sie die Aufnahme nochmal anhören wollen, drücken Sie \"Aufnahme abspielen\".</p><p>Wenn Sie mit der Aufnahme zufrieden sind, drücken Sie \"Weiter\".</p>",
   "change-microphone-button": "Mikrofon ändern",
   "listen-again-button": "Aufnahme abspielen",
-  "speaker-check": "<p>Wenn Sie auf \"Weiter\" klicken, wird Ihnen ein Satz vorgespielt. Bitte stellen Sie die Lautstärke Ihrer Kopfhörer so ein, dass Sie den Satz klar und deutlich verstehen.</p>",
+  "speaker-check": "<p>Wenn Sie auf \"Weiter\" klicken, wird Ihnen ein Satz vorgespielt.</p><p><b>Bitte stellen Sie die Lautstärke Ihrer Kopfhörer so ein, dass Sie den Satz klar und deutlich verstehen.</b></p>",
   "speaker-check-restart": "<p>Ist die Lautstärke so angenehm für Sie?</p>",
-  "begin-training-session": "<p><b>Training</b><br>Anhand einiger Beispiele werden Sie nun durch den Ablauf des Experiments geführt.<br>Bitte lesen Sie sich die Instruktionen aufmerksam durch.</p>",
-  "begin-technical":"<p><b>Technische Einstellung</b><br>Im nächsten Schritt bitten wir Sie, Ihr Mikrofon auszuwählen und zu testen und die Lautstärke einzustellen. Bitte führen Sie das Experiment mit Kopfhörern durch.</p>",
-  "begin-titration": "<p>Wilkommen zum Experiment.</p><p>Als erstes bestimmen wir die Schwelle, ab der Sie in einem verrauschten Signal Sprache wahrnehmen. Diese Schwelle kann von Person zu Person variieren.</p><p>Zu Beginn jedes Durchgangs ist das Signal sehr verrauscht und wird im Verlauf immer deutlicher. Jeder Durchgang enthält ein neues Signal und kann in seiner Länge variieren. Bei jeder Abstufung fragen wir Sie, ob das Signal Sprache beziehungsweise ein Wort enthält. Bitte beachten Sie dass es Durchgänge gibt, in denen keine Sprache enthalten ist. Der Beginn eines neuen Durchgangs wird durch ein Lautsprechersymbol signalisiert.</p><p>Bitte hören Sie im Folgenden genau zu und beantworten Sie die Fragen warheitsgemäß.</p>",
-  "titration-before-first": "<p>Nun hören Sie in verrauschtes Signal.</p>",
+  "begin-training-session": "<p><b>Training</b></p><p>Anhand einiger Beispiele werden Sie nun durch den Ablauf des Experiments geführt.</p><p><b>Bitte lesen Sie sich die Instruktionen aufmerksam durch.</b></p>",
+  "begin-technical":"<p><b>Technische Einstellungen</b></p><p>Im nächsten Schritt bitten wir Sie, Ihr Mikrofon auszuwählen und zu testen und die Lautstärke einzustellen.</p><p><b>Bitte führen Sie das Experiment mit Kopfhörern durch.</b></p>",
+  "begin-titration": "<p><b>Kalibrierung</b></p><p>Bevor das Experiment beginnt, bestimmen wir die Schwelle, ab der Sie in einem verrauschten Signal Sprache wahrnehmen. Diese Schwelle kann von Person zu Person variieren.</p>",
+  "begin-titration-linear": "<p>Zu Beginn jedes Durchgangs ist das Signal sehr verrauscht und wird im Verlauf immer deutlicher. Jeder Durchgang enthält ein neues Signal und kann in seiner Länge variieren. Bei jeder Abstufung fragen wir Sie, ob das Signal Sprache beziehungsweise ein Wort enthält. Bitte beachten Sie dass es Durchgänge gibt, in denen keine Sprache enthalten ist. Der Beginn eines neuen Durchgangs wird durch ein Lautsprechersymbol signalisiert.</p><p><b>Bitte hören Sie im Folgenden genau zu und beantworten Sie die Fragen warheitsgemäß.</b></p>",
+  "begin-titration-random-sampling": "//TODO Random Sampling Instruktionen",
+  "end-of-titration": "<p><b>Vielen Dank!</b></p><p>Sie haben die Kalibrierung erfolgreich beendet. Jetzt beginnt das Training.</p>",
+  "titration-before-first": "<p>Nun hören Sie ein verrauschtes Signal.</p>",
   "language-detected-question": "<p>Haben Sie in diesem Signal Sprache verstanden?</p>",
   "word-detected-question": "<p>Haben Sie ein konkretes Wort verstanden?</p>",
   "titration-which-word-question": "Welches Wort haben Sie verstanden?",
   "titration-typo-question": "<p>Wollten Sie dieses Wort eingeben: ",
   "id": {
-    "umlaut":"<p><b>Bevor das Experiment beginnt, erstellen Sie zunächst einen persönlichen Probandencode. Bitte beachten Sie, dass Umlaute durch den entsprechenden Vokal ersetzt werden (z.B. ä durch ae) und ß durch ss. Groß- und Kleinschreibung spielt keine Rolle.</b></p>",
+    "umlaut":"<p><b>Erstellung eines persönlichen Probandencodes</b></p><p>Bevor das Experiment beginnt, erstellen Sie zunächst einen persönlichen Probandencode. Bitte beachten Sie, dass Umlaute durch den entsprechenden Vokal ersetzt werden (z.B. ä durch ae) und ß durch ss. Groß- und Kleinschreibung spielt keine Rolle.</p>",
     "city": "Geben Sie die ersten zwei Buchstaben Ihrer Geburtsstadt an:",
       "birthMonth": "Wählen Sie Ihren Geburtsmonat:",
     "mother": "Geben Sie die ersten zwei Buchstaben des Vornamens Ihrer Mutter an:",
