Added improvements for titration only task:
- added self reporting in last page
- made random titration pick the same channel number for the reverse word and the original word
- added "well done ### more words to go" pages every 10 titration trials
- added "same as last time" button during the "which word was understood" question
- made the word input only accept (german) letters

--- a/assets/text/langs/de.json
+++ b/assets/text/langs/de.json
@@ -35,6 +35,7 @@
   "consent-form": "Willkommen & Einverständniserklärung",
   "yes-button": "Ja",
   "no-button": "Nein",
+  "same-as-last-button": "Ja, das gleiche",
   "not-understood":"Ich habe nichts verstanden",
   "mic-test": "<p><b>Bitte sagen Sie ein Wort, um Ihr Mikrofon zu testen.</b></p><p>Sprechen Sie dafür <b>laut</b> und <b>deutlich</b>.</p>",
   "recording-check": "<p><b>Haben Sie das Wort gehört, das Sie aufgenommen haben?</b></p><p>Wenn Sie die Aufnahme wiederholen wollen, drücken Sie \"Mikrofon ändern\".</p><p>Wenn Sie die Aufnahme nochmal anhören wollen, drücken Sie \"Aufnahme abspielen\".</p><p>Wenn Sie mit der Aufnahme zufrieden sind, drücken Sie \"Weiter\".</p>",
@@ -50,10 +51,13 @@
   "end-titration": "<p><b>Vielen Dank!</b></p><p>Sie haben die Kalibrierung erfolgreich beendet. Jetzt beginnt das Training.</p>",
   "titration-next-word": "<p><img class=\"main-symbol\" src='assets/images/chat-bubble-icon.svg'></p><p>Beginn eines neuen Durchgangs</p>",
   "titration-before-first": "<p>Nun hören Sie ein verrauschtes Geräusch.</p>",
+  "titration-word-input-help": "Bitte geben Sie genau ein Wort ein. Leerzeichen, Zahlen und Sonderzeichen sind nicht erlaubt.",
   "language-detected-question": "<p>Haben Sie in diesem Geräusch Sprache verstanden?</p>",
   "word-detected-question": "<p>Haben Sie ein konkretes Wort verstanden?</p>",
+  "titration-motivation": "<p>Sehr gut! Sie haben schon $1 von $2 Wörtern geschafft.</p>",
   "titration-which-word-question": "Welches Wort haben Sie verstanden?",
   "titration-typo-question": "<p>Wollten Sie dieses Wort eingeben: ",
+  "self-reporting-question": "<p>Bitte antworten sie <b>ehrlich</b>: Haben Sie das Experiment in einer ruhigen Umgebung durchgeführt?</p>",
   "id": {
     "umlaut":"<p><b>Erstellung eines persönlichen Probandencodes</b></p><p>Bevor das Experiment beginnt, erstellen Sie zunächst einen persönlichen Probandencode. Bitte beachten Sie, dass Umlaute durch den entsprechenden Vokal ersetzt werden (z.B. ä durch ae) und ß durch ss. Groß- und Kleinschreibung spielt keine Rolle.</p>",
     "city": "Geben Sie die ersten zwei Buchstaben Ihrer Geburtsstadt an:",
